<resources>
	<string name="changelog_notification_">Recent changes:</string>
	<string name="changelog_notification_text">Click here to show recent changes of</string>
	<string name="never_show_again">Never show changelog again</string>
	<string name="notes_from_developer_">Notes from developer</string>
	<string name="notes_from_developer_text">Click here to show recent news from the developer</string>
	<string name="about0_">Watch your call, message and data plans!</string>
	<string name="about0">CallMeter generates reports from call, message and data logs. It supports several modes of billing.</string>
	<string name="about1">The output format is usage | time or count used this billing period | time or count overall.</string>
	<string name="about2">The billing mode specifies the length of the first / next billing intervals. E.g. 60/10 means every call is billed for minimum 60s, any longer call is rounded up to next full 10s.</string>
	<string name="about3">CallMeter runs in background every 30min (only if not in standby). This means, that deleting calls or messages older than 30min will not change your stats. Deleting calls or messages younger than 30min may result in wrong statistics.</string>
	<string name="author_and_many_more">and many more...</string>
	<string name="send_">Send</string>
	<string name="add_">Add</string>
	<string name="add_log">Add log entry</string>
	<string name="length_hint_call">Length in seconds</string>
	<string name="length_hint_data">Length in kB</string>
	<string name="settings">Preferences</string>
	<string name="update_interval_">Update interval</string>
	<string name="update_interval_hint">Shorter period will use more battery.</string>
	<string name="update_interval_data_">Update interval (data)</string>
	<string name="update_interval_data_hint">Update data stats needs to be done more often. Esp. Samsung needs very short intervals.</string>
	<string name="date_begin_">Beginning of records</string>
	<string name="date_begin_hint">Ignore any logs before this date.</string>
	<string name="delete_old_logs_">Delete logs older than</string>
	<string name="delete_old_logs_help">Delete logs older than x days from internal database. Leave empty to disable.</string>
	<string name="common_prefs_">Common preferences</string>
	<string name="edit_">Edit</string>
	<string name="delete_">Delete</string>
	<string name="up_">Move up</string>
	<string name="down_">Move down</string>
	<string name="about_">About</string>
	<string name="about_hint">About this app</string>
	<string name="faq_hint">Some tips and tricks, how to set up this app.</string>
	<string name="feedback_">Feedback</string>
	<string name="feedback_hint">Report bugs, request features ...</string>
	<string name="google_plus_hint">Follow me on Google+.\nGet update notifications etc.</string>
	<string name="twitter_hint">Follow me on twitter.\nGet update notifications etc.</string>
	<string name="more_">More Apps..</string>
	<string name="billing_">Billing</string>
	<string name="billday_">First day of your bill</string>
	<string name="billmode_">Mode of billing</string>
	<string name="billdate_">Start of billing period:</string>
	<string name="appearance_">Appearance</string>
	<string name="behavior_">Behavior</string>
	<string name="appearance_and_behavior_">Appearance &amp; behavior</string>
	<string name="widget_">Widget</string>
	<string name="widgets_">Widgets</string>
	<string name="widgets_no_widgets_">No widgets added</string>
	<string name="widgets_no_widgets_hint">There are no widgets added to the launcher.</string>
	<string name="delete_widget">Delete widget</string>
	<string name="simple_preferences_">Simple preferences</string>
	<string name="simple_preferences_hint">Very simple preferences, suitable for most users. Only available with default rule set.</string>
	<string name="simple_preferences_deactivated">Simple preferences are available for default rule set only. Import the default rule set to reactivate.</string>
	<string name="advanced_preferences_">Advanced preferences</string>
	<string name="advanced_preferences_hint">This allows you to set a way more complex setup. Most Users won\'t need it.</string>
	<string name="theme_">Theme</string>
	<string name="textsize_">Text size</string>
	<string name="textsize_hint">Text size in pixels; leave empty for default</string>
	<string name="textsize_title_">Title\'s text size</string>
	<string name="textsize_title_hint">Text size for titles in pixels; leave empty for default</string>
	<string name="textsize_bigtitle_">Big title\'s text size</string>
	<string name="textsize_bigtitle_hint">Text size for big titles in pixels; leave empty for default</string>
	<string name="textsize_spacer_">Spacer\'s size</string>
	<string name="textsize_spacer_hint">Size for spacers in pixels; leave empty for default</string>
	<string name="textsize_pbar_">Progress bar\'s size</string>
	<string name="textsize_pbar_hint">Size for progress bars in pixels; leave empty for default</string>
	<string name="textsize_pbarbp_">Bill period\'s progress bar\'s size</string>
	<string name="textsize_pbarbp_hint">Size for bill period\'s progress bars in pixels; leave empty for default</string>
	<string name="show_today_">Show today</string>
	<string name="show_today_hint">Show today stats</string>
	<string name="show_total_">Show total</string>
	<string name="show_total_hint">Show total stats, disable to see current only.</string>
	<string name="show_time_">Switch to date</string>
	<string name="show_titlebar_">Show title bar</string>
	<string name="show_titlebar_hint">Show title bar in main view. Without title bar, there is no way to see background activity.</string>
	<string name="show_hours_">Show hours</string>
	<string name="show_hours_hint">Show time in seconds, minutes, hours and days.\nIf unchecked only seconds and minutes are shown.</string>
	<string name="show_help_">Show help</string>
	<string name="show_help_hint">Show help in Plans/Rules setup view.</string>
	<string name="show_shortname_">Show short name instead of long name</string>
	<string name="show_cost_">Show cost</string>
	<string name="show_billperiod_">Show progress of billing period</string>
	<string name="show_icon_">Show icon</string>
	<string name="hide_name_">Hide name of plan</string>
	<string name="small_widget_">Use small widget</string>
	<string name="show_calllength_">Show info after hanging up</string>
	<string name="show_calllength_hint">Show length/cost of a call after hanging up.</string>
	<string name="hide_zero_">Hide empty plans</string>
	<string name="hide_zero_hint">Hide plans containing no item.</string>
	<string name="hide_nocost_">Hide no cost plans</string>
	<string name="hide_nocost_hint">Hide plans with no cost.</string>
	<string name="hide_progressbars_">Hide progress bars</string>
	<string name="hide_progressbars_hint">Hide progress bars in main view.</string>
	<string name="custom_currency_symbol_">Custom currency symbol</string>
	<string name="custom_currency_symbol_hint">Set a custom currency symbol, leave empty for system default.</string>
	<string name="custom_currency_format_">Custom currency format</string>
	<string name="custom_currency_format_hint">Select a custom currency format.</string>
	<string name="custom_date_format_">Custom date format</string>
	<string name="custom_date_format_hint">Select a custom date format.</string>
	<string name="custom_delimiter_">Custom delimiter</string>
	<string name="custom_delimiter_hint">Set a custom delimiter separating the blocks of statistics.</string>
	<string name="split_sms_at_160_">Split text messages at 160 chars</string>
	<string name="split_sms_at_160_hint">Disable to use android\'s system method.</string>
	<string name="ask_for_plan_">Ask for plan</string>
	<string name="ask_for_plan_hint">Ask for plan for unmatched calls after hanging up.</string>
	<string name="autohide_">Auto hide</string>
	<string name="autohide_hint">Hide dialog after .. seconds. Leave empty to deactivate auto hide.</string>
	<string name="select_plan_">Select a plan</string>
	<string name="set_selected_as_default_">Set selected plan as default</string>
	<string name="autohide_in_">Auto hide dialog in: %ds</string>
	<string name="logs">Logs</string>
	<string name="now">Now</string>
	<string name="show_logs">Show logs</string>
	<string name="plans">Plans</string>
	<string name="plans_hint">Set your plans for all kind of billing here.</string>
	<string name="plans_new">New plan</string>
	<string name="rule_">Rule</string>
	<string name="rules">Rules</string>
	<string name="rules_hint">Set your billing rules here.</string>
	<string name="rules_new">New Rule</string>
	<string name="length_">Length</string>
	<string name="blength_">Billed length</string>
	<string name="cost_">Cost</string>
	<string name="remote_">Remote number</string>
	<string name="numbergroups_edit_">Number groups</string>
	<string name="numbergroups_edit_hint">Edit number groups here.</string>
	<string name="hourgroups_edit_">Hour groups</string>
	<string name="hourgroups_edit_hint">Edit hour groups here.</string>
	<string name="numbers">Numbers</string>
	<string name="numbergroup_">Include numbers</string>
	<string name="numbergroup_help">Add some numbers this rule must match.\n\nWildcards (\"%\") are allowed on both ends of the number.\nE.g. %34 will match 1234, 12% will match 1234 and %23% will match 12345.</string>
	<string name="exnumbergroup_">Exclude numbers</string>
	<string name="exnumbergroup_help">Add some numbers this rule must not match.\nSee above.</string>
	<string name="new_numbergroup">New number group</string>
	<string name="add_number">Add number</string>
	<string name="numbergroup_excalls">Exclude from calls</string>
	<string name="numbergroup_exsms">Exclude from SMS</string>
	<string name="hours">Hours</string>
	<string name="hourgroup_">Include hours</string>
	<string name="hourgroup_help">Add some hours this rule must match.</string>
	<string name="exhourgroup_">Exclude hours</string>
	<string name="exhourgroup_help">Add some hours this rule must not match.</string>
	<string name="new_hourgroup">New hour group</string>
	<string name="add_hour">Add hour</string>
	<string name="empty_group">Empty groups won\'t match anything. Please go back and add at least one item.</string>
	<string name="billperiod_sn">BillPeriod</string>
	<string name="calls">Calls</string>
	<string name="calls_in">Calls In</string>
	<string name="calls_in_">CallsIn</string>
	<string name="calls_out">Calls Out</string>
	<string name="calls_out_">CallsOut</string>
	<string name="messages">Messages</string>
	<string name="messages_">SMS/MMS</string>
	<string name="sms">SMS</string>
	<string name="sms_in">SMS In</string>
	<string name="sms_in_">SMSIn</string>
	<string name="sms_out">SMS Out</string>
	<string name="sms_out_">SMSOut</string>
	<string name="mms">MMS</string>
	<string name="mms_in">MMS In</string>
	<string name="mms_in_">MMSIn</string>
	<string name="mms_out">MMS Out</string>
	<string name="mms_out_">MMSOut</string>
	<string name="data">Data</string>
	<string name="help_">Help</string>
	<string name="name_">Name</string>
	<string name="billmode_help">Set the mode of billing calls.\nThe first part is the minimum length billed by your provider. Each call with a shorter length is rounded up to this.\nThe second part is the minimum length of following blocks of seconds.\nPlease read the FAQ for further help.</string>
	<string name="plan_">Plan</string>
	<string name="roamed_">Roamed</string>
	<string name="remote_hint">Remote number</string>
	<string name="empty_group_">Please press "Add" to add an item to this group.</string>
	<string name="widget_plan_textsize">Plan Text Size</string>
	<string name="widget_cost_textsize">Cost Text Size</string>
	<string name="widget_text_color_">Text color</string>
	<string name="widget_backgroud_color_">Background color</string>
	<string name="widget_backgroud_transparency_">Background transparency</string>
</resources>