<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009-2012 Felix Bechstein -->
<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:inputType="number"
        android:key="textsize"
        android:summary="@string/textsize_hint"
        android:title="@string/textsize_" />
    <EditTextPreference
        android:inputType="number"
        android:key="textsize_bigtitle"
        android:summary="@string/textsize_bigtitle_hint"
        android:title="@string/textsize_bigtitle_" />
    <EditTextPreference
        android:inputType="number"
        android:key="textsize_title"
        android:summary="@string/textsize_title_hint"
        android:title="@string/textsize_title_" />
    <EditTextPreference
        android:inputType="number"
        android:key="textsize_spacer"
        android:summary="@string/textsize_spacer_hint"
        android:title="@string/textsize_spacer_" />
    <EditTextPreference
        android:inputType="number"
        android:key="textsize_pbar"
        android:summary="@string/textsize_pbar_hint"
        android:title="@string/textsize_pbar_" />
    <EditTextPreference
        android:inputType="number"
        android:key="textsize_pbarbp"
        android:summary="@string/textsize_pbarbp_hint"
        android:title="@string/textsize_pbarbp_" />

</PreferenceScreen>