<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2011 Felix Bechstein
	-->
	<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/common_prefs_">

	</PreferenceCategory>
	<PreferenceCategory android:title="@string/calls">
		<ListPreference android:key="billmode" android:title="@string/billmode_"
			android:summary="@string/billmode_help" android:entries="@array/billmodes"
			android:entryValues="@array/billmodes" />
		<EditTextPreference android:key="custom_billmode"
			android:title="@string/billmode_" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/sms">

	</PreferenceCategory>
	<PreferenceCategory android:title="@string/mms">

	</PreferenceCategory>
	<PreferenceCategory android:title="@string/data">

	</PreferenceCategory>
</PreferenceScreen>
