<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2010 Felix Bechstein
	-->
	<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/de.ub0r.android.callmeter"
	android:layout_height="fill_parent" android:layout_width="fill_parent">
	<LinearLayout android:id="@+id/bar"
		android:layout_alignParentBottom="true" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		style="@android:style/ButtonBar">
		<ToggleButton android:id="@+id/calls" android:textOn="@string/calls" android:textOff="@string/calls"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" android:checked="true" />
		<ToggleButton android:id="@+id/sms" android:textOn="@string/sms" android:textOff="@string/sms" 
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" android:checked="true" />
		<ToggleButton android:id="@+id/mms" android:textOn="@string/mms" android:textOff="@string/mms"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" android:checked="true" />
		<ToggleButton android:id="@+id/data" android:textOn="@string/data" android:textOff="@string/data"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" android:checked="true" />
	</LinearLayout>

	<ListView android:id="@id/android:list" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:drawSelectorOnTop="false"
		android:scrollingCache="true" android:fastScrollEnabled="true"
		android:choiceMode="singleChoice" android:background="?android:attr/colorBackground"
		android:cacheColorHint="?android:attr/colorBackground"
		android:layout_above="@id/bar" />
</RelativeLayout>
