<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009-2012 Felix Bechstein -->
<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dip" >

    <TextView
        android:id="@android:id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="text1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/plan_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/text1"
        android:text="@string/plan_" />

    <TextView
        android:id="@+id/rule_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/plan_"
        android:text="@string/rule_" />

    <TextView
        android:id="@+id/remote_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rule_"
        android:text="@string/remote_" />

    <TextView
        android:id="@+id/mynumber_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/remote_"
        android:text="@string/my_number_" />

    <TextView
        android:id="@+id/length_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mynumber_"
        android:text="@string/length_" />

    <TextView
        android:id="@+id/blength_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/length_"
        android:text="@string/blength_" />

    <TextView
        android:id="@+id/cost_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/blength_"
        android:text="@string/cost_" />

    <TextView
        android:id="@+id/plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@android:id/text1"
        android:text="string/plan" />

    <TextView
        android:id="@+id/rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/plan"
        android:text="string/rule" />

    <TextView
        android:id="@+id/remote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rule"
        android:text="string/remote" />

    <TextView
        android:id="@+id/mynumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/remote"
        android:text="string/mynumber" />

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/mynumber"
        android:text="string/length" />

    <TextView
        android:id="@+id/blength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/length"
        android:text="string/blength" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/blength"
        android:text="string/cost" />

</RelativeLayout>