<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2010 Felix Bechstein
	-->
	<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content">
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:orientation="vertical">
		<Spinner android:id="@+id/type" android:entries="@array/rules_type"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<Spinner android:id="@+id/direction" android:entries="@array/direction_calls"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<EditText android:id="@+id/length" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:hint="@string/length_hint_call"
			android:inputType="number" />
		<EditText android:id="@+id/remote" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:hint="@string/remote_hint" />
		<DatePicker android:id="@+id/date" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<TimePicker android:id="@+id/time" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<CheckBox android:id="@+id/roamed" android:text="@string/roamed_"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
	</LinearLayout>
</ScrollView>
