<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2010 Felix Bechstein
	-->
	<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/de.ub0r.android.callmeter"
	android:layout_height="fill_parent" android:layout_width="fill_parent">
	<LinearLayout android:id="@+id/ok_add"
		android:layout_alignParentBottom="true" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		style="@android:style/ButtonBar">
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:id="@+id/name" android:text="@string/name_"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:singleLine="false" android:paddingRight="5dip" />
			<EditText android:id="@+id/name_et" android:layout_width="0dip"
				android:layout_height="wrap_content" android:singleLine="true"
				android:layout_weight="1" />
			<Button android:id="@+id/name_help" android:text="@string/help_"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout android:id="@+id/ok_add"
			android:layout_alignParentBottom="true" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<Button android:id="@+id/ok" android:text="@android:string/ok"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" />
			<Button android:id="@+id/help" android:text="@string/help_"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" />
			<Button android:id="@+id/add" android:text="@string/add_"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_above="@id/ok_add">
		<ListView android:id="@id/android:list" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:drawSelectorOnTop="false"
			android:scrollingCache="true" android:fastScrollEnabled="true"
			android:choiceMode="singleChoice" />
		<TextView android:id="@+id/empty_list" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:gravity="center"
			android:singleLine="false" android:text="@string/empty_group_"
			android:layout_centerInParent="true" android:visibility="gone" />
	</RelativeLayout>
</RelativeLayout>
